Creacion de ficheros del proyecto, pintado de proyectos existentes. Cambios menores de estilos

--- a/src/css/abrirProyecto.css
+++ b/src/css/abrirProyecto.css
@@ -1,13 +1,13 @@
 AnchorPane{
     -fx-background-color: #D4FFD4;
 }
-Button{
+#nuevoP{
     -fx-background-color: rgba(0,0,0,0);
     -fx-border-color: #32CD32;
     -fx-border-width: 2px;
     -fx-border-radius: 4px;
 }
-Button:hover{
+#nuevoP:hover{
     -fx-background-color: #AAFFAA;
 }
 #lCrearP{
@@ -17,4 +17,11 @@ Button:hover{
 MenuBar{
     -fx-background-color: #D4FFD4;
     -fx-font-size: 15px; 
+}
+.bProyecto{
+    -fx-background-color: #FFFD5B;
+    -fx-border-color: #FFC41E;
+    -fx-border-width: 2px;
+    -fx-border-radius: 4px;
+    -fx-margin-rigth: 10px;
 }
