--- a/src/lime/ide/AbrirProyectoUI.fxml
+++ b/src/lime/ide/AbrirProyectoUI.fxml
@@ -22,7 +22,7 @@
          <children>
             <FlowPane prefHeight="200.0" prefWidth="200.0">
                <children>
-                  <Button fx:id="bNuevoProyecto" mnemonicParsing="false" prefHeight="60.0" prefWidth="69.0">
+                  <Button id="nuevoP" fx:id="bNuevoProyecto" mnemonicParsing="false" prefHeight="60.0" prefWidth="69.0">
                      <graphic>
                         <ImageView fitHeight="55.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -56,6 +56,11 @@
                   <Insets top="20.0" />
                </GridPane.margin>
             </MenuBar>
+            <FlowPane fx:id="fpProyectos" prefHeight="175.0" prefWidth="324.0" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets bottom="25.0" left="25.0" />
+               </GridPane.margin>
+            </FlowPane>
          </children>
       </GridPane>
    </children>
